analogue Change Log

Version 0.8-1

	* Replaced instances of `.Internal(sample(....))` with
	`sample.int(....)` at request of Brian Ripley.

Version 0.8-0

	* Updated Example test checks and packaged for release to CRAN
	Jan 11, 2012.

Version 0.7-7

	* mat: new argument `kmax` can be used to limit the number of
	analogues considered as models when fitting MAT transfer
	functions. By default, `mat()` considers models with 1 through
	to n-1 analogues (n = number of sites). `kmax` can control this
	upper limit which will speed up fitting models, especially for
	large training sets. Invariably one wouldn't want to average
	over entire training sets to produce predictions, or even over
	large numbers of analogues. As such I may set an upper limit for
	the default value of `kmax` before this is released to CRAN.

	* cumWmean, cummean: as a result of the above addition of `kmax`,
	these two functions now take a `kmax` argument also. The default
	behaviour is unchanged however.

	* chooseTaxa: `type = "OR"` was not working due to a typo. It
	returned the same as `type = "AND"`.

Version 0.7-6

	* Stratiplot: Handling of absolute data types was broken. Fix
	applied that should allow this to work if there are only
	absolute scale variables or a mix or relative and absolute
	data. All reletaive data should be unaffected.

	* panel.Stratiplot: gains arguments `gridh` and gridv` which
	control the number of horizontal and vertical grid lines used
	on each panel. These correspond to the `h` and `v` arguments of
	`panel.grid` in the Lattice package. The default is `-1` for
	both, which attempts to align the grid lines with the tick marks.

Version 0.7-5

	* weightedCor: implements one of the tests from Telford & Birks
	(2011, QSR) based on the weighted correlation of WA optima and
	constrained ordination species scores. Has a plot method.

	* rdaFit: Non-user (currently) function that implements RDA
	without all of the overhead of vegan::rda. As such it doesn't